--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+<html>
+<center>
+  <head>
+    <link rel="stylesheet" href="font.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
+    <script src="sketch.js"></script>
+    <br></br>
+    <h1>Hello, welcome to Hoomans of DT</h1>
+    <br></br>
+  </head>
+  <body>
+    <img src="./playground.png" style="width:1034px;height:730px;">
+  </body>
+</center>
+</html>
